--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="hero-content">
             <h1 class="hero-title">
                 <span class="line">Hi, I'm</span>
-                <span class="line highlight">Your Name</span>
+                <span class="line highlight">Sudo_rogue</span>
             </h1>
             <p class="hero-subtitle">Creative thinker & Tech enthusiast</p>
             <a href="#about" class="cta-button">Explore More</a>
@@ -95,7 +95,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-info">
                             <h3>Email</h3>
-                            <p>your.email@example.com</p>
+                            <p>Linuxnoobplayer@gmail.com</p>
                         </div>
                     </a>
                     <a href="https://github.com/yourusername" target="_blank" class="contact-card">
