--- a/index.html
+++ b/index.html
@@ -91,25 +91,23 @@
             <div class="contact-content">
                 <p class="contact-intro">Feel free to reach out if you want to connect, collaborate, or just say hi!</p>
                 <div class="contact-links">
-                    <a href="mailto:your.email@example.com" class="contact-card">
+                    <a href="mailto:linuxnoobplayer@gmail.com" class="contact-card">
                         <div class="contact-icon">📧</div>
                         <div class="contact-info">
                             <h3>Email</h3>
-                            <p>Linuxnoobplayer@gmail.com</p>
+                           
                         </div>
                     </a>
-                    <a href="https://github.com/yourusername" target="_blank" class="contact-card">
+                    <a href="https://github.com/sudo_rogue" target="_blank" class="contact-card">
                         <div class="contact-icon">💻</div>
                         <div class="contact-info">
                             <h3>GitHub</h3>
-                            <p>sudo_rogue</p>
                         </div>
                     </a>
-                    <a href="https://twitter.com/yourusername" target="_blank" class="contact-card">
+                    <a href="https://twitter.com/sudo_rogue" target="_blank" class="contact-card">
                         <div class="contact-icon">🐦</div>
                         <div class="contact-info">
                             <h3>Twitter</h3>
-                            <p>@yourusername</p>
                         </div>
                     </a>
                     <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-card">
