--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">YN</div>
+            <div class="logo">SR</div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
@@ -98,7 +98,7 @@
                            
                         </div>
                     </a>
-                    <a href="https://github.com/sudo_rogue" target="_blank" class="contact-card">
+                    <a href="https://github.com/linuxnoobplayer/" target="_blank" class="contact-card">
                         <div class="contact-icon">💻</div>
                         <div class="contact-info">
                             <h3>GitHub</h3>
@@ -110,11 +110,10 @@
                             <h3>Twitter</h3>
                         </div>
                     </a>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-card">
+                    <a href="https://linkedin.com/in/" target="_blank" class="contact-card">
                         <div class="contact-icon">💼</div>
                         <div class="contact-info">
                             <h3>LinkedIn</h3>
-                            <p>/in/yourprofile</p>
                         </div>
                     </a>
                 </div>
@@ -123,7 +122,7 @@
     </section>
 
     <footer class="footer">
-        <p>Made with ❤️ by Your Name</p>
+        <p>Made by sudo_rogue</p>
     </footer>
 
     <script src="script.js"></script>
