--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Hey there! I'm a passionate individual who loves technology and creativity. I enjoy exploring new ideas and turning them into reality.</p>
-                    <p>I believe in continuous learning and pushing boundaries. Whether it's diving into a new project or picking up a new skill, I'm always up for a challenge.</p>
-                    <p>When I'm not working on something tech-related, you'll find me pursuing my hobbies and interests that keep me inspired and motivated.</p>
+                    <p>Hii there! I am a passionate guy who loves to explore the internet and learn more about technology. I enjoy doing and experimenting with new thing and turning them into reality. </p>
+                    <p>I believe in learning continuously and pushing to my limits. Whether it's about diving into a new project or exploring new ideas and skills, I'm always there for the thrill of it.</p>
+                    <p>When I'm not working on any tech related project you will find me pursuing my hobbies and interests which keeps me inspired and motivated. </p>
                 </div>
             </div>
         </div>
